src/generated/FetchucciniParser.py
# Generated from grammar/FetchucciniParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FetchucciniParser ( Parser ):

    grammarFileName = "FetchucciniParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'FETCH'", "'EXTRACT'", "'FROM'", "'WHERE'", 
                     "'EXPORT'", "'AS'", "'TO'", "'JSON'", "'CSV'", "'text'", 
                     "'attr'", "'regex'", "'AND'", "'OR'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'{'", "'}'", "'('", 
                     "')'", "':'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "KW_FETCH", "KW_EXTRACT", "KW_FROM", 
                      "KW_WHERE", "KW_EXPORT", "KW_AS", "KW_TO", "KW_JSON", 
                      "KW_CSV", "KW_TEXT", "KW_ATTR", "KW_REGEX", "OP_AND", 
                      "OP_OR", "OP_EQ", "OP_NEQ", "OP_LE", "OP_GE", "OP_LT", 
                      "OP_GT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", 
                      "COMMA", "SEMICOLON", "ID", "NUMBER", "STRING", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_query = 1
    RULE_fetchClause = 2
    RULE_extractClause = 3
    RULE_fieldList = 4
    RULE_fieldDef = 5
    RULE_extractor = 6
    RULE_whereClause = 7
    RULE_condition = 8
    RULE_conditionAnd = 9
    RULE_comparison = 10
    RULE_relOp = 11
    RULE_expression = 12
    RULE_exportClause = 13
    RULE_format = 14

    ruleNames =  [ "program", "query", "fetchClause", "extractClause", "fieldList", 
                   "fieldDef", "extractor", "whereClause", "condition", 
                   "conditionAnd", "comparison", "relOp", "expression", 
                   "exportClause", "format" ]

    EOF = Token.EOF
    KW_FETCH=1
    KW_EXTRACT=2
    KW_FROM=3
    KW_WHERE=4
    KW_EXPORT=5
    KW_AS=6
    KW_TO=7
    KW_JSON=8
    KW_CSV=9
    KW_TEXT=10
    KW_ATTR=11
    KW_REGEX=12
    OP_AND=13
    OP_OR=14
    OP_EQ=15
    OP_NEQ=16
    OP_LE=17
    OP_GE=18
    OP_LT=19
    OP_GT=20
    LBRACE=21
    RBRACE=22
    LPAREN=23
    RPAREN=24
    COLON=25
    COMMA=26
    SEMICOLON=27
    ID=28
    NUMBER=29
    STRING=30
    WS=31
    COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(FetchucciniParser.QueryContext,0)


        def EOF(self):
            return self.getToken(FetchucciniParser.EOF, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FetchucciniParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.query()
            self.state = 31
            self.match(FetchucciniParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fetchClause(self):
            return self.getTypedRuleContext(FetchucciniParser.FetchClauseContext,0)


        def extractClause(self):
            return self.getTypedRuleContext(FetchucciniParser.ExtractClauseContext,0)


        def exportClause(self):
            return self.getTypedRuleContext(FetchucciniParser.ExportClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(FetchucciniParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return FetchucciniParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = FetchucciniParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.fetchClause()
            self.state = 34
            self.extractClause()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 35
                self.whereClause()


            self.state = 38
            self.exportClause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FetchClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.url = None # Token

        def KW_FETCH(self):
            return self.getToken(FetchucciniParser.KW_FETCH, 0)

        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_fetchClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFetchClause" ):
                return visitor.visitFetchClause(self)
            else:
                return visitor.visitChildren(self)




    def fetchClause(self):

        localctx = FetchucciniParser.FetchClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fetchClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(FetchucciniParser.KW_FETCH)
            self.state = 41
            localctx.url = self.match(FetchucciniParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtractClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_EXTRACT(self):
            return self.getToken(FetchucciniParser.KW_EXTRACT, 0)

        def LBRACE(self):
            return self.getToken(FetchucciniParser.LBRACE, 0)

        def fieldList(self):
            return self.getTypedRuleContext(FetchucciniParser.FieldListContext,0)


        def RBRACE(self):
            return self.getToken(FetchucciniParser.RBRACE, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_extractClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtractClause" ):
                return visitor.visitExtractClause(self)
            else:
                return visitor.visitChildren(self)




    def extractClause(self):

        localctx = FetchucciniParser.ExtractClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_extractClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(FetchucciniParser.KW_EXTRACT)
            self.state = 44
            self.match(FetchucciniParser.LBRACE)
            self.state = 45
            self.fieldList()
            self.state = 46
            self.match(FetchucciniParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FetchucciniParser.FieldDefContext)
            else:
                return self.getTypedRuleContext(FetchucciniParser.FieldDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FetchucciniParser.COMMA)
            else:
                return self.getToken(FetchucciniParser.COMMA, i)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_fieldList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldList" ):
                return visitor.visitFieldList(self)
            else:
                return visitor.visitChildren(self)




    def fieldList(self):

        localctx = FetchucciniParser.FieldListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fieldList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.fieldDef()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 49
                self.match(FetchucciniParser.COMMA)
                self.state = 50
                self.fieldDef()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.alias = None # Token
            self.selector = None # Token

        def COLON(self):
            return self.getToken(FetchucciniParser.COLON, 0)

        def extractor(self):
            return self.getTypedRuleContext(FetchucciniParser.ExtractorContext,0)


        def KW_FROM(self):
            return self.getToken(FetchucciniParser.KW_FROM, 0)

        def ID(self):
            return self.getToken(FetchucciniParser.ID, 0)

        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_fieldDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDef" ):
                return visitor.visitFieldDef(self)
            else:
                return visitor.visitChildren(self)




    def fieldDef(self):

        localctx = FetchucciniParser.FieldDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fieldDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            localctx.alias = self.match(FetchucciniParser.ID)
            self.state = 57
            self.match(FetchucciniParser.COLON)
            self.state = 58
            self.extractor()
            self.state = 59
            self.match(FetchucciniParser.KW_FROM)
            self.state = 60
            localctx.selector = self.match(FetchucciniParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtractorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FetchucciniParser.RULE_extractor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RegexExtractorContext(ExtractorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExtractorContext
            super().__init__(parser)
            self.pattern = None # Token
            self.copyFrom(ctx)

        def KW_REGEX(self):
            return self.getToken(FetchucciniParser.KW_REGEX, 0)
        def LPAREN(self):
            return self.getToken(FetchucciniParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(FetchucciniParser.RPAREN, 0)
        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegexExtractor" ):
                return visitor.visitRegexExtractor(self)
            else:
                return visitor.visitChildren(self)


    class TextExtractorContext(ExtractorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExtractorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KW_TEXT(self):
            return self.getToken(FetchucciniParser.KW_TEXT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTextExtractor" ):
                return visitor.visitTextExtractor(self)
            else:
                return visitor.visitChildren(self)


    class AttrExtractorContext(ExtractorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExtractorContext
            super().__init__(parser)
            self.attrName = None # Token
            self.copyFrom(ctx)

        def KW_ATTR(self):
            return self.getToken(FetchucciniParser.KW_ATTR, 0)
        def LPAREN(self):
            return self.getToken(FetchucciniParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(FetchucciniParser.RPAREN, 0)
        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrExtractor" ):
                return visitor.visitAttrExtractor(self)
            else:
                return visitor.visitChildren(self)



    def extractor(self):

        localctx = FetchucciniParser.ExtractorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_extractor)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = FetchucciniParser.TextExtractorContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(FetchucciniParser.KW_TEXT)
                pass
            elif token in [11]:
                localctx = FetchucciniParser.AttrExtractorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(FetchucciniParser.KW_ATTR)
                self.state = 64
                self.match(FetchucciniParser.LPAREN)
                self.state = 65
                localctx.attrName = self.match(FetchucciniParser.STRING)
                self.state = 66
                self.match(FetchucciniParser.RPAREN)
                pass
            elif token in [12]:
                localctx = FetchucciniParser.RegexExtractorContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(FetchucciniParser.KW_REGEX)
                self.state = 68
                self.match(FetchucciniParser.LPAREN)
                self.state = 69
                localctx.pattern = self.match(FetchucciniParser.STRING)
                self.state = 70
                self.match(FetchucciniParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_WHERE(self):
            return self.getToken(FetchucciniParser.KW_WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(FetchucciniParser.ConditionContext,0)


        def getRuleIndex(self):
            return FetchucciniParser.RULE_whereClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = FetchucciniParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(FetchucciniParser.KW_WHERE)
            self.state = 74
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FetchucciniParser.ConditionAndContext)
            else:
                return self.getTypedRuleContext(FetchucciniParser.ConditionAndContext,i)


        def OP_OR(self, i:int=None):
            if i is None:
                return self.getTokens(FetchucciniParser.OP_OR)
            else:
                return self.getToken(FetchucciniParser.OP_OR, i)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = FetchucciniParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.conditionAnd()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 77
                self.match(FetchucciniParser.OP_OR)
                self.state = 78
                self.conditionAnd()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FetchucciniParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(FetchucciniParser.ComparisonContext,i)


        def OP_AND(self, i:int=None):
            if i is None:
                return self.getTokens(FetchucciniParser.OP_AND)
            else:
                return self.getToken(FetchucciniParser.OP_AND, i)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_conditionAnd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionAnd" ):
                return visitor.visitConditionAnd(self)
            else:
                return visitor.visitChildren(self)




    def conditionAnd(self):

        localctx = FetchucciniParser.ConditionAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditionAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.comparison()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 85
                self.match(FetchucciniParser.OP_AND)
                self.state = 86
                self.comparison()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.right = None # ExpressionContext

        def relOp(self):
            return self.getTypedRuleContext(FetchucciniParser.RelOpContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FetchucciniParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(FetchucciniParser.ExpressionContext,i)


        def getRuleIndex(self):
            return FetchucciniParser.RULE_comparison

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = FetchucciniParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            localctx.left = self.expression()
            self.state = 93
            self.relOp()
            self.state = 94
            localctx.right = self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP_EQ(self):
            return self.getToken(FetchucciniParser.OP_EQ, 0)

        def OP_NEQ(self):
            return self.getToken(FetchucciniParser.OP_NEQ, 0)

        def OP_LT(self):
            return self.getToken(FetchucciniParser.OP_LT, 0)

        def OP_LE(self):
            return self.getToken(FetchucciniParser.OP_LE, 0)

        def OP_GT(self):
            return self.getToken(FetchucciniParser.OP_GT, 0)

        def OP_GE(self):
            return self.getToken(FetchucciniParser.OP_GE, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_relOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelOp" ):
                return visitor.visitRelOp(self)
            else:
                return visitor.visitChildren(self)




    def relOp(self):

        localctx = FetchucciniParser.RelOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_relOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FetchucciniParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class IdExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(FetchucciniParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdExpr" ):
                return visitor.visitIdExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FetchucciniParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(FetchucciniParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = FetchucciniParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                localctx = FetchucciniParser.IdExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(FetchucciniParser.ID)
                pass
            elif token in [29]:
                localctx = FetchucciniParser.NumberExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(FetchucciniParser.NUMBER)
                pass
            elif token in [30]:
                localctx = FetchucciniParser.StringExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(FetchucciniParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.path = None # Token

        def KW_EXPORT(self):
            return self.getToken(FetchucciniParser.KW_EXPORT, 0)

        def KW_AS(self):
            return self.getToken(FetchucciniParser.KW_AS, 0)

        def format_(self):
            return self.getTypedRuleContext(FetchucciniParser.FormatContext,0)


        def KW_TO(self):
            return self.getToken(FetchucciniParser.KW_TO, 0)

        def SEMICOLON(self):
            return self.getToken(FetchucciniParser.SEMICOLON, 0)

        def STRING(self):
            return self.getToken(FetchucciniParser.STRING, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_exportClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportClause" ):
                return visitor.visitExportClause(self)
            else:
                return visitor.visitChildren(self)




    def exportClause(self):

        localctx = FetchucciniParser.ExportClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exportClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(FetchucciniParser.KW_EXPORT)
            self.state = 104
            self.match(FetchucciniParser.KW_AS)
            self.state = 105
            self.format_()
            self.state = 106
            self.match(FetchucciniParser.KW_TO)
            self.state = 107
            localctx.path = self.match(FetchucciniParser.STRING)
            self.state = 108
            self.match(FetchucciniParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_JSON(self):
            return self.getToken(FetchucciniParser.KW_JSON, 0)

        def KW_CSV(self):
            return self.getToken(FetchucciniParser.KW_CSV, 0)

        def getRuleIndex(self):
            return FetchucciniParser.RULE_format

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormat" ):
                return visitor.visitFormat(self)
            else:
                return visitor.visitChildren(self)




    def format_(self):

        localctx = FetchucciniParser.FormatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_format)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





